# aiwholesail

./: .env  .gitignore  CHANGELOG.md  MIGRATION_GUIDE.md  PRODUCTION_CHECKLIST.md  README.md  README_DEPLOY.md  bun.lockb  capacitor.config.ts  cli-test.js  components.json  index.html  marketing-context.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.claude/: settings.local.json
.github/: dependabot.yml
ads/: ad-landscape-1200x628 2.html  ad-retarget-1080x1080 2.html  ad-square-1080x1080 2.html  ad-story-1080x1920.html  build-ads 2.js  build-final.py  capture-site.js  composite-ads.sh  convert-to-mp4 2.js  generate-avatar-image.py  generate-avatar-videos 2.py  generate-tts.py  package 2.json  package-lock 2.json  poll-and-build 3.py  record-site-demo.js
aiwholesail-api/: .env  .env.example  CLIPPING_CLI.md  ecosystem.config.js  index.js  package-lock.json  package.json
data-raw/: additional-cities.json
deploy/: deploy.sh
dev-tracker/: email-outreach-2026-05-13-session.md
docs/: OBSERVABILITY.md
email-templates/: README.md  _trial-base.html  analysis-complete-template.html  property-alert-template.html  trial-day-0.html  trial-day-minus-1.html  trial-day-minus-2.html  trial-day-plus-14.html  trial-day-plus-3.html  (+1 more)
offmarketiq/: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
offmarketiq/alembic/: env.py
offmarketiq/alembic/versions/: 20260514_0500_initial_schema.py
offmarketiq/app/: __init__.py  celery_app.py  config.py  database.py  main.py
offmarketiq/app/api/v1/: counties.py  router.py
offmarketiq/app/models/: __init__.py  county.py  owner.py  property.py  score.py  scrape_job.py  signal.py
offmarketiq/app/scrapers/: __init__.py  base.py  scrape_do.py  vision.py
offmarketiq/app/scrapers/assessors/: __init__.py  socrata.py
offmarketiq/app/tasks/: etl_tasks.py  export_tasks.py  maintenance_tasks.py  scrape_tasks.py
offmarketiq/nginx/: nginx.conf
offmarketiq/prometheus/: prometheus.yml
offmarketiq/scripts/: bootstrap_counties.py
offmarketiq/tests/integration/: __init__.py
offmarketiq/tests/unit/: test_phase_0_smoke.py
(+966 files in other folders)
